# Prueba_Tecnica2

backend/: .env  actualizar_usuario_admin.py  requirements.txt
backend/aplicacion/casos_uso/: autenticacion.py  chatbot.py  crear_producto.py  registrar_movimiento.py
backend/aplicacion/interfaces/: repositorios.py
backend/autenticacion/: admin.py  models.py  serializers.py  urls.py  views.py
backend/autenticacion/migrations/: 0001_initial.py
backend/blockchain/: admin.py  models.py  serializers.py  urls.py  views.py
backend/blockchain/migrations/: 0001_initial.py
backend/configuracion/: settings.py  urls.py
backend/dominio/: README.md  __init__.py  pyproject.toml  setup.py
backend/dominio/entidades/: __init__.py  empresa.py  inventario.py  movimiento.py  producto.py  usuario.py
backend/dominio/excepciones/: __init__.py  excepciones_negocio.py
backend/empresas/: admin.py  models.py  serializers.py  urls.py  views.py
backend/empresas/migrations/: 0001_initial.py
backend/ia/: admin.py  apps.py  chatbot_service.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/ia/migrations/: 0001_initial.py  0002_accionia_conversacionia_mensajeia_and_more.py
backend/inteligencia_artificial/: admin.py  models.py  serializers.py  urls.py  views.py
backend/inventario/: admin.py  models.py  serializers.py  urls.py  views.py
backend/presentacion/: dependencias.py
backend/productos/: admin.py  models.py  serializers.py  urls.py  views.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
(+64 files in other folders)
